feat: 활성화된 카테고리 조회 API 구현
- CategoriesResponse 추가
- GlobalExceptionHandler에 파라미터가 없는 경우 발생하는 예외 MissingServletRequestParameterException 추가